--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
-  },
-  "devDependencies": {
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {}
 }
